testing surveys and fixes
